--- a/Delmon Managment System/JobOfferRPT.rdlc
+++ b/Delmon Managment System/JobOfferRPT.rdlc
@@ -102,39 +102,6 @@
               <PaddingBottom>2pt</PaddingBottom>
             </Style>
           </Textbox>
-          <Textbox Name="NationalityName">
-            <CanGrow>true</CanGrow>
-            <KeepTogether>true</KeepTogether>
-            <Paragraphs>
-              <Paragraph>
-                <TextRuns>
-                  <TextRun>
-                    <Value>=First(Fields!NationalityName.Value, "DataSet1")</Value>
-                    <Style>
-                      <FontFamily>Calibri</FontFamily>
-                      <FontSize>12pt</FontSize>
-                    </Style>
-                  </TextRun>
-                </TextRuns>
-                <Style />
-              </Paragraph>
-            </Paragraphs>
-            <rd:DefaultName>NationalityName</rd:DefaultName>
-            <Top>0.45139in</Top>
-            <Left>1.71243in</Left>
-            <Height>0.25in</Height>
-            <Width>2.66791in</Width>
-            <ZIndex>3</ZIndex>
-            <Style>
-              <Border>
-                <Style>None</Style>
-              </Border>
-              <PaddingLeft>2pt</PaddingLeft>
-              <PaddingRight>2pt</PaddingRight>
-              <PaddingTop>2pt</PaddingTop>
-              <PaddingBottom>2pt</PaddingBottom>
-            </Style>
-          </Textbox>
           <Textbox Name="Textbox9">
             <CanGrow>true</CanGrow>
             <KeepTogether>true</KeepTogether>
@@ -157,7 +124,7 @@
             <Left>0.22632in</Left>
             <Height>0.25in</Height>
             <Width>1.28521in</Width>
-            <ZIndex>4</ZIndex>
+            <ZIndex>3</ZIndex>
             <Style>
               <Border>
                 <Style>None</Style>
@@ -190,7 +157,7 @@
             <Left>1.71243in</Left>
             <Height>0.25in</Height>
             <Width>2.66792in</Width>
-            <ZIndex>5</ZIndex>
+            <ZIndex>4</ZIndex>
             <Style>
               <Border>
                 <Style>None</Style>
@@ -223,7 +190,7 @@
             <Left>0.22632in</Left>
             <Height>0.25in</Height>
             <Width>1.28521in</Width>
-            <ZIndex>6</ZIndex>
+            <ZIndex>5</ZIndex>
             <Style>
               <Border>
                 <Style>None</Style>
@@ -256,7 +223,7 @@
             <Left>1.71243in</Left>
             <Height>0.25in</Height>
             <Width>2.66791in</Width>
-            <ZIndex>7</ZIndex>
+            <ZIndex>6</ZIndex>
             <Style>
               <Border>
                 <Style>None</Style>
@@ -289,7 +256,7 @@
             <Left>0.22632in</Left>
             <Height>0.25in</Height>
             <Width>1.28521in</Width>
-            <ZIndex>8</ZIndex>
+            <ZIndex>7</ZIndex>
             <Style>
               <Border>
                 <Style>None</Style>
@@ -322,7 +289,7 @@
             <Left>1.71243in</Left>
             <Height>0.25in</Height>
             <Width>2.66791in</Width>
-            <ZIndex>9</ZIndex>
+            <ZIndex>8</ZIndex>
             <Style>
               <Border>
                 <Style>None</Style>
@@ -439,7 +406,7 @@
             <Left>0.06139in</Left>
             <Height>0.25in</Height>
             <Width>6.12041in</Width>
-            <ZIndex>10</ZIndex>
+            <ZIndex>9</ZIndex>
             <Style>
               <Border>
                 <Style>None</Style>
@@ -468,7 +435,7 @@
             <Left>0.22632in</Left>
             <Height>0.25in</Height>
             <Width>1.28521in</Width>
-            <ZIndex>11</ZIndex>
+            <ZIndex>10</ZIndex>
             <Style>
               <Border>
                 <Style>None</Style>
@@ -498,6 +465,36 @@
             <Left>4.34957cm</Left>
             <Height>0.99688cm</Height>
             <Width>12.46502cm</Width>
+            <ZIndex>11</ZIndex>
+            <Style>
+              <Border>
+                <Style>None</Style>
+              </Border>
+              <PaddingLeft>2pt</PaddingLeft>
+              <PaddingRight>2pt</PaddingRight>
+              <PaddingTop>2pt</PaddingTop>
+              <PaddingBottom>2pt</PaddingBottom>
+            </Style>
+          </Textbox>
+          <Textbox Name="NationalityName">
+            <CanGrow>true</CanGrow>
+            <KeepTogether>true</KeepTogether>
+            <Paragraphs>
+              <Paragraph>
+                <TextRuns>
+                  <TextRun>
+                    <Value>=First(Fields!NationalityName.Value, "DataSet1")</Value>
+                    <Style />
+                  </TextRun>
+                </TextRuns>
+                <Style />
+              </Paragraph>
+            </Paragraphs>
+            <rd:DefaultName>NationalityName</rd:DefaultName>
+            <Top>1.173cm</Top>
+            <Left>4.34957cm</Left>
+            <Height>0.60852cm</Height>
+            <Width>6.77652cm</Width>
             <ZIndex>12</ZIndex>
             <Style>
               <Border>
