--- a/Delmon Managment System/VisaReport.rdlc
+++ b/Delmon Managment System/VisaReport.rdlc
@@ -29,6 +29,10 @@
           <DataField>TotalVisas</DataField>
           <rd:TypeName>System.Int32</rd:TypeName>
         </Field>
+        <Field Name="ReservedTo">
+          <DataField>ReservedTo</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
       </Fields>
       <rd:DataSetInfo>
         <rd:DataSetName>Delmon</rd:DataSetName>
@@ -51,10 +55,13 @@
                   <Width>10.65293cm</Width>
                 </TablixColumn>
                 <TablixColumn>
+                  <Width>8.77062cm</Width>
+                </TablixColumn>
+                <TablixColumn>
                   <Width>3.0468cm</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>1.43285cm</Width>
+                  <Width>5.4016cm</Width>
                 </TablixColumn>
               </TablixColumns>
               <TablixRows>
@@ -72,6 +79,7 @@
                                 <TextRun>
                                   <Value>Company Name</Value>
                                   <Style>
+                                    <FontFamily>Arial Rounded MT Bold</FontFamily>
                                     <FontSize>11pt</FontSize>
                                     <FontWeight>Bold</FontWeight>
                                   </Style>
@@ -98,6 +106,42 @@
                     </TablixCell>
                     <TablixCell>
                       <CellContents>
+                        <Textbox Name="Textbox7">
+                          <CanGrow>true</CanGrow>
+                          <KeepTogether>true</KeepTogether>
+                          <Paragraphs>
+                            <Paragraph>
+                              <TextRuns>
+                                <TextRun>
+                                  <Value>Reserved To</Value>
+                                  <Style>
+                                    <FontFamily>Arial Rounded MT Bold</FontFamily>
+                                    <FontSize>11pt</FontSize>
+                                    <FontWeight>Bold</FontWeight>
+                                  </Style>
+                                </TextRun>
+                              </TextRuns>
+                              <Style>
+                                <TextAlign>Center</TextAlign>
+                              </Style>
+                            </Paragraph>
+                          </Paragraphs>
+                          <rd:DefaultName>Textbox7</rd:DefaultName>
+                          <Style>
+                            <Border>
+                              <Color>LightGrey</Color>
+                              <Style>Solid</Style>
+                            </Border>
+                            <PaddingLeft>2pt</PaddingLeft>
+                            <PaddingRight>2pt</PaddingRight>
+                            <PaddingTop>2pt</PaddingTop>
+                            <PaddingBottom>2pt</PaddingBottom>
+                          </Style>
+                        </Textbox>
+                      </CellContents>
+                    </TablixCell>
+                    <TablixCell>
+                      <CellContents>
                         <Textbox Name="Textbox13">
                           <CanGrow>true</CanGrow>
                           <KeepTogether>true</KeepTogether>
@@ -107,6 +151,7 @@
                                 <TextRun>
                                   <Value>Visa Status</Value>
                                   <Style>
+                                    <FontFamily>Arial Rounded MT Bold</FontFamily>
                                     <FontSize>11pt</FontSize>
                                     <FontWeight>Bold</FontWeight>
                                   </Style>
@@ -142,6 +187,7 @@
                                 <TextRun>
                                   <Value>Total </Value>
                                   <Style>
+                                    <FontFamily>Arial Rounded MT Bold</FontFamily>
                                     <FontSize>11pt</FontSize>
                                     <FontWeight>Bold</FontWeight>
                                   </Style>
@@ -181,7 +227,9 @@
                               <TextRuns>
                                 <TextRun>
                                   <Value>=Fields!CompanyName.Value</Value>
-                                  <Style />
+                                  <Style>
+                                    <FontFamily>Arial Rounded MT Bold</FontFamily>
+                                  </Style>
                                 </TextRun>
                               </TextRuns>
                               <Style>
@@ -205,6 +253,40 @@
                     </TablixCell>
                     <TablixCell>
                       <CellContents>
+                        <Textbox Name="ReservedTo">
+                          <CanGrow>true</CanGrow>
+                          <KeepTogether>true</KeepTogether>
+                          <Paragraphs>
+                            <Paragraph>
+                              <TextRuns>
+                                <TextRun>
+                                  <Value>=Fields!ReservedTo.Value</Value>
+                                  <Style>
+                                    <FontFamily>Arial Rounded MT Bold</FontFamily>
+                                  </Style>
+                                </TextRun>
+                              </TextRuns>
+                              <Style>
+                                <TextAlign>Center</TextAlign>
+                              </Style>
+                            </Paragraph>
+                          </Paragraphs>
+                          <rd:DefaultName>ReservedTo</rd:DefaultName>
+                          <Style>
+                            <Border>
+                              <Color>LightGrey</Color>
+                              <Style>Solid</Style>
+                            </Border>
+                            <PaddingLeft>2pt</PaddingLeft>
+                            <PaddingRight>2pt</PaddingRight>
+                            <PaddingTop>2pt</PaddingTop>
+                            <PaddingBottom>2pt</PaddingBottom>
+                          </Style>
+                        </Textbox>
+                      </CellContents>
+                    </TablixCell>
+                    <TablixCell>
+                      <CellContents>
                         <Textbox Name="VisaStatus">
                           <CanGrow>true</CanGrow>
                           <KeepTogether>true</KeepTogether>
@@ -213,7 +295,9 @@
                               <TextRuns>
                                 <TextRun>
                                   <Value>=Fields!VisaStatus.Value</Value>
-                                  <Style />
+                                  <Style>
+                                    <FontFamily>Arial Rounded MT Bold</FontFamily>
+                                  </Style>
                                 </TextRun>
                               </TextRuns>
                               <Style>
@@ -245,7 +329,9 @@
                               <TextRuns>
                                 <TextRun>
                                   <Value>=Fields!TotalVisas.Value</Value>
-                                  <Style />
+                                  <Style>
+                                    <FontFamily>Arial Rounded MT Bold</FontFamily>
+                                  </Style>
                                 </TextRun>
                               </TextRuns>
                               <Style>
@@ -276,6 +362,7 @@
                 <TablixMember />
                 <TablixMember />
                 <TablixMember />
+                <TablixMember />
               </TablixMembers>
             </TablixColumnHierarchy>
             <TablixRowHierarchy>
@@ -292,7 +379,7 @@
             <Top>0.67029cm</Top>
             <Left>1.43507cm</Left>
             <Height>2.9198cm</Height>
-            <Width>15.13258cm</Width>
+            <Width>27.87195cm</Width>
             <Style>
               <Border>
                 <Style>None</Style>
@@ -307,7 +394,7 @@
           </Border>
         </Style>
       </Body>
-      <Width>7.90119in</Width>
+      <Width>12.03661in</Width>
       <Page>
         <PageHeader>
           <Height>6.04696cm</Height>
@@ -405,7 +492,7 @@
                         <TextRun>
                           <Value>Visa Status - Report</Value>
                           <Style>
-                            <FontFamily>calibri</FontFamily>
+                            <FontFamily>Arial Rounded MT Bold</FontFamily>
                             <FontSize>20pt</FontSize>
                           </Style>
                         </TextRun>
@@ -437,7 +524,9 @@
                       <TextRuns>
                         <TextRun>
                           <Value>= " Date range: " &amp; Format(Parameters!param1.Value, "dd/MM/yyyy") &amp; "  To  " &amp; Format(Parameters!param2.Value, "dd/MM/yyyy")</Value>
-                          <Style />
+                          <Style>
+                            <FontFamily>Arial Rounded MT Bold</FontFamily>
+                          </Style>
                         </TextRun>
                       </TextRuns>
                       <Style>
@@ -448,7 +537,7 @@
                   <rd:DefaultName>Textbox5</rd:DefaultName>
                   <Top>1.49692cm</Top>
                   <Left>3.31136cm</Left>
-                  <Height>0.6cm</Height>
+                  <Height>0.86458cm</Height>
                   <Width>10.4375cm</Width>
                   <ZIndex>1</ZIndex>
                   <Style>
@@ -482,7 +571,7 @@
           </Style>
         </PageHeader>
         <PageFooter>
-          <Height>2.54cm</Height>
+          <Height>7.3025cm</Height>
           <PrintOnFirstPage>true</PrintOnFirstPage>
           <PrintOnLastPage>true</PrintOnLastPage>
           <Style>
