--- a/Delmon Managment System/JobOfferRPT.rdlc
+++ b/Delmon Managment System/JobOfferRPT.rdlc
@@ -1094,7 +1094,7 @@
                 <Paragraph>
                   <TextRuns>
                     <TextRun>
-                      <Value>Hassan Kamil</Value>
+                      <Value>Mohammed Hussin Mohammed AlAbdullah</Value>
                       <Style>
                         <FontFamily>Calibri</FontFamily>
                         <FontSize>11pt</FontSize>
